--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "^47.0.0",
     "firebase": "^8.2.3",
+    "lottie-react-native": "^5.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
